pkgs/dartcv_core/src/core.h

CvStatus *Mat_NewWithSize(int rows, int cols, int type, Mat *rval);
CvStatus *Mat_NewWithSizes(VecI32 sizes, int type, Mat *rval);
CvStatus *Mat_NewWithSizesFromScalar(VecI32 sizes, int type, Scalar ar, Mat *rval);
CvStatus *Mat_NewWithSizesFromBytes(VecI32 sizes, int type, void *buf, Mat *rval);
CvStatus *Mat_NewFromVecPoint3f(VecPoint3f vec, Mat *rval);
CvStatus *Mat_NewFromVecPoint3i(VecPoint3i vec, Mat *rval);
CvStatus *Mat_PatchNaNs(Mat m, double val);
uchar *Mat_Ptr_u8_1(Mat m, int i);
CvStatus *Mat_PCACompute(Mat src, Mat mean, Mat eigenvectors, Mat eigenvalues, int maxComponents);
CvStatus *Mat_Normalize(Mat src, Mat dst, double alpha, double beta, int typ, int dtype, Mat mask);
CvStatus *Mat_PerspectiveTransform(Mat src, Mat dst, Mat tm);
CvStatus *Mat_PolarToCart(Mat magnitude, Mat degree, Mat x, Mat y, bool angleInDegrees);
CvStatus *Mat_Pow(Mat src, double power, Mat dst);
CvStatus *Mat_Phase(Mat x, Mat y, Mat angle, bool angleInDegrees);