pkgs/dartcv_core/src/core_async.h

CvStatus *Mat_New_Async(CvCallback_1 callback);
CvStatus *Mat_NewWithSize_Async(int rows, int cols, int type, CvCallback_1 callback);
CvStatus *Mat_NewWithSizes_Async(VecI32 sizes, int type, CvCallback_1 callback);
CvStatus *Mat_NewWithSizesScalar_Async(VecI32 sizes, int type, Scalar s, CvCallback_1 callback);
CvStatus *
Mat_NewWithSizesFromBytes_Async(VecI32 sizes, int type, VecChar buf, CvCallback_1 callback);
CvStatus *Mat_NewFromVecPoint_Async(VecPoint vec, CvCallback_1 callback);
CvStatus *Mat_NewFromVecPoint2f_Async(VecPoint2f vec, CvCallback_1 callback);
CvStatus *Mat_NewFromVecPoint3f_Async(VecPoint3f vec, CvCallback_1 callback);
CvStatus *Mat_Ones_Async(int rows, int cols, int type, CvCallback_1 callback);