pkgs/dartcv_core/lib/src/g/core.g.dart


  late final _Mat_NewFromVecPoint2f_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint2f, imp1.CvCallback_1)>>('Mat_NewFromVecPoint2f_Async');
  late final _Mat_NewFromVecPoint2f_Async =
      _Mat_NewFromVecPoint2f_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VecPoint2f, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_NewFromVecPoint3f(
    VecPoint3f vec,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_NewFromVecPoint3f(
      vec,
      rval,
    );
  }

  late final _Mat_NewFromVecPoint3fPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint3f, ffi.Pointer<Mat>)>>('Mat_NewFromVecPoint3f');
  late final _Mat_NewFromVecPoint3f = _Mat_NewFromVecPoint3fPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint3f, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewFromVecPoint3f_Async(
    VecPoint3f vec,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_NewFromVecPoint3f_Async(
      vec,
      callback,
    );
  }

  late final _Mat_NewFromVecPoint3f_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint3f, imp1.CvCallback_1)>>('Mat_NewFromVecPoint3f_Async');
  late final _Mat_NewFromVecPoint3f_Async =
      _Mat_NewFromVecPoint3f_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VecPoint3f, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_NewFromVecPoint3i(
    VecPoint3i vec,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_NewFromVecPoint3i(
      vec,
      rval,
    );
  }

  late final _Mat_NewFromVecPoint3iPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint3i, ffi.Pointer<Mat>)>>('Mat_NewFromVecPoint3i');
  late final _Mat_NewFromVecPoint3i = _Mat_NewFromVecPoint3iPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint3i, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewFromVecPoint_Async(
    VecPoint vec,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_NewFromVecPoint_Async(
      vec,
      callback,
    );
  }

  late final _Mat_NewFromVecPoint_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, imp1.CvCallback_1)>>('Mat_NewFromVecPoint_Async');
  late final _Mat_NewFromVecPoint_Async =
      _Mat_NewFromVecPoint_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_NewWithSize(
    int rows,
    int cols,
    int type,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_NewWithSize(
      rows,
      cols,
      type,
      rval,
    );
  }

  late final _Mat_NewWithSizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>>('Mat_NewWithSize');
  late final _Mat_NewWithSize = _Mat_NewWithSizePtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, int, int, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewWithSize_Async(
    int rows,
    int cols,
    int type,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_NewWithSize_Async(
      rows,
      cols,
      type,
      callback,
    );
  }

  late final _Mat_NewWithSize_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Int,
              imp1.CvCallback_1)>>('Mat_NewWithSize_Async');
  late final _Mat_NewWithSize_Async = _Mat_NewWithSize_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_NewWithSizes(
    VecI32 sizes,
    int type,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_NewWithSizes(
      sizes,
      type,
      rval,
    );
  }

  late final _Mat_NewWithSizesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecI32, ffi.Int, ffi.Pointer<Mat>)>>('Mat_NewWithSizes');
  late final _Mat_NewWithSizes = _Mat_NewWithSizesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecI32, int, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewWithSizesFromBytes(
    VecI32 sizes,
    int type,
    ffi.Pointer<ffi.Void> buf,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_NewWithSizesFromBytes(
      sizes,
      type,
      buf,
      rval,
    );
  }

  late final _Mat_NewWithSizesFromBytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecI32, ffi.Int, ffi.Pointer<ffi.Void>,
              ffi.Pointer<Mat>)>>('Mat_NewWithSizesFromBytes');
  late final _Mat_NewWithSizesFromBytes =
      _Mat_NewWithSizesFromBytesPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecI32, int, ffi.Pointer<ffi.Void>, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewWithSizesFromBytes_Async(
    VecI32 sizes,
    int type,
    VecChar buf,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_NewWithSizesFromBytes_Async(
      sizes,
      type,
      buf,
      callback,
    );
  }

  late final _Mat_NewWithSizesFromBytes_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecI32, ffi.Int, VecChar,
              imp1.CvCallback_1)>>('Mat_NewWithSizesFromBytes_Async');
  late final _Mat_NewWithSizesFromBytes_Async =
      _Mat_NewWithSizesFromBytes_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecI32, int, VecChar, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_NewWithSizesFromScalar(
    VecI32 sizes,
    int type,
    Scalar ar,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_NewWithSizesFromScalar(
      sizes,
      type,
      ar,
      rval,
    );
  }

  late final _Mat_NewWithSizesFromScalarPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecI32, ffi.Int, Scalar,
              ffi.Pointer<Mat>)>>('Mat_NewWithSizesFromScalar');
  late final _Mat_NewWithSizesFromScalar =
      _Mat_NewWithSizesFromScalarPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecI32, int, Scalar, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewWithSizesScalar_Async(
    VecI32 sizes,
    int type,
    Scalar s,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_NewWithSizesScalar_Async(
      sizes,
      type,
      s,
      callback,
    );
  }

  late final _Mat_NewWithSizesScalar_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecI32, ffi.Int, Scalar,
              imp1.CvCallback_1)>>('Mat_NewWithSizesScalar_Async');
  late final _Mat_NewWithSizesScalar_Async =
      _Mat_NewWithSizesScalar_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecI32, int, Scalar, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_NewWithSizes_Async(
    VecI32 sizes,
    int type,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_NewWithSizes_Async(
      sizes,
      type,
      callback,
    );
  }

  late final _Mat_NewWithSizes_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecI32, ffi.Int, imp1.CvCallback_1)>>('Mat_NewWithSizes_Async');
  late final _Mat_NewWithSizes_Async = _Mat_NewWithSizes_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecI32, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_New_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_New_Async(
      callback,
    );
  }

  late final _Mat_New_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>('Mat_New_Async');
  late final _Mat_New_Async = _Mat_New_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_Normalize(
    Mat src,
    Mat dst,
    double alpha,
    double beta,
    int typ,
    int dtype,
    Mat mask,
  ) {
    return _Mat_Normalize(
      src,
      dst,
      alpha,
      beta,
      typ,
      dtype,
      mask,
    );
  }

  late final _Mat_NormalizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, ffi.Double,
              ffi.Int, ffi.Int, Mat)>>('Mat_Normalize');
  late final _Mat_Normalize = _Mat_NormalizePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, double, double, int, int, Mat)>();

  ffi.Pointer<CvStatus> Mat_Ones_Async(
    int rows,
    int cols,
    int type,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_Ones_Async(
      rows,
      cols,
      type,
      callback,
    );
  }

  late final _Mat_Ones_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Int, ffi.Int, ffi.Int, imp1.CvCallback_1)>>('Mat_Ones_Async');
  late final _Mat_Ones_Async = _Mat_Ones_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_PCACompute(
    Mat src,
    Mat mean,
    Mat eigenvectors,
    Mat eigenvalues,
    int maxComponents,
  ) {
    return _Mat_PCACompute(
      src,
      mean,
      eigenvectors,
      eigenvalues,
      maxComponents,
    );
  }

  late final _Mat_PCAComputePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, ffi.Int)>>('Mat_PCACompute');
  late final _Mat_PCACompute = _Mat_PCAComputePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, int)>();

  ffi.Pointer<CvStatus> Mat_PatchNaNs(
    Mat m,
    double val,
  ) {
    return _Mat_PatchNaNs(
      m,
      val,
    );
  }

  late final _Mat_PatchNaNsPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Double)>>(
      'Mat_PatchNaNs');
  late final _Mat_PatchNaNs = _Mat_PatchNaNsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> Mat_PerspectiveTransform(
    Mat src,
    Mat dst,
    Mat tm,
  ) {
    return _Mat_PerspectiveTransform(
      src,
      dst,
      tm,
    );
  }

  late final _Mat_PerspectiveTransformPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_PerspectiveTransform');
  late final _Mat_PerspectiveTransform = _Mat_PerspectiveTransformPtr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_Phase(
    Mat x,
    Mat y,
    Mat angle,
    bool angleInDegrees,
  ) {
    return _Mat_Phase(
      x,
      y,
      angle,
      angleInDegrees,
    );
  }

  late final _Mat_PhasePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Bool)>>('Mat_Phase');
  late final _Mat_Phase = _Mat_PhasePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, bool)>();

  ffi.Pointer<CvStatus> Mat_PolarToCart(
    Mat magnitude,
    Mat degree,
    Mat x,
    Mat y,
    bool angleInDegrees,
  ) {
    return _Mat_PolarToCart(
      magnitude,
      degree,
      x,
      y,
      angleInDegrees,
    );
  }

  late final _Mat_PolarToCartPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, ffi.Bool)>>('Mat_PolarToCart');
  late final _Mat_PolarToCart = _Mat_PolarToCartPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, bool)>();

  ffi.Pointer<CvStatus> Mat_Pow(
    Mat src,
    double power,
    Mat dst,
  ) {
    return _Mat_Pow(
      src,
      power,
      dst,
    );
  }

  late final _Mat_PowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Double, Mat)>>('Mat_Pow');
  late final _Mat_Pow = _Mat_PowPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double, Mat)>();

  ffi.Pointer<imp1.uchar> Mat_Ptr_u8_1(
    Mat m,
    int i,
  ) {
    return _Mat_Ptr_u8_1(
      m,
      i,
    );
  }
